crates/reinhardt-pages/tests/ui/client_form/choices/fail/duplicate_serialized_value.rs
use reinhardt_pages::ClientFormChoices;

#[derive(Clone, Default, PartialEq, ClientFormChoices)]
enum ProviderMode {
	#[default]
	#[serde(rename = "same")]
	Fake,
	#[serde(rename = "same")]
	Live,
}

fn main() {}
