crates/reinhardt-pages/tests/ui/client_form/choices/fail/duplicate_serialized_value.stderr
error: duplicate ClientFormChoices serialized value `same`
 --> tests/ui/client_form/choices/fail/duplicate_serialized_value.rs:9:2
  |
9 |     Live,
  |     ^^^^
